# instagram-graph-api

./: .cursorignore  .env  .env.example  .gitignore  Dockerfile  README.md  __init__.py  docker-compose.yml  instagram-graph-api-map.json  pyproject.toml  requirements.txt  run_tests.sh  sample.sh  start.sh  test.sh
app/: __init__.py  config.py  main.py  models.py  routes.py  services.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  aggregator.py  instagram.py
app/core/: config.py  logging.py
app/db/: supabase.py
app/middleware/: __init__.py  error_handler.py  logging_middleware.py
app/schemas/: __init__.py  aggregator.py  instagram.py  responses.py
app/services/: __init__.py  data_aggregator.py  instagram.py  instagram_api.py
app/tests/: __init__.py  test_api.py
app/utils/: __init__.py  date_utils.py
supabase/: config.toml
supabase/migrations/: 20240308000000_create_instagram_data_table.sql
