[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-graph-api"
version = "1.0.0"
description = "A production-ready FastAPI service for fetching Instagram insights using the Instagram Graph API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Instagram Graph API Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.27.1",
    "httpx==0.27.0",
    "pydantic==2.6.1",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.7",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "tenacity==8.2.3",
    "python-dotenv==1.0.0",
    "loguru==0.7.2",
    "orjson==3.9.10",
    "supabase==2.3.1",
    "requests==2.31.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/instagram-graph-api"
"Bug Tracker" = "https://github.com/yourusername/instagram-graph-api/issues"

[project.scripts]
start = "uvicorn:run(app='app.main:app', host='0.0.0.0', port=8000, reload=True)"
setup-supabase = "setup_supabase:main"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.3.0",
    "ruff==0.0.262",
] 